[package]
name = "chimitheque_people_keycloak_exporter"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Bellembois <thomas.bellembois@proton.me>"]
description = "Users exporter for keycloak for Chimithèque"
license = "GPL-3.0"
repository = "https://github.com/tbellembois/chimitheque_people_keycloak_exporter"
homepage = "https://github.com/tbellembois/chimitheque_people_keycloak_exporter"
readme = "README.md"
categories = ["database", "science"]
keywords = ["chemistry", "biology", "database", "management"]
rust-version = "1.94.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.1"
log = "0.4.20"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
